crates/context-macro/tests/constraints/missing_system_program.fail.stderr
error: One constraint requires including the `Program<System>` account.
  --> tests/constraints/missing_system_program.fail.rs:17:1
   |
17 | pub struct InitContext {
   | ^^^
